// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  id={undefined}
  name="material"
  path="/materials/undefined"
  render={[Function]}
/>
`;

exports[`renders correctly with id 1`] = `
<div
  id="123"
  name="material"
  path="/materials/123"
  render={[Function]}
/>
`;
